Stored the datas in a JSON file